Ajoute js index sidebar + api

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="templates/header.html">
     <title>Miam & Co</title>
 </head>
 <body>
@@ -21,5 +22,6 @@
 
         </div>
     </section>
+<script src="assets/js/main.js"></script> <!--Mis en bas de page pour ne pas ralentir le chargement de la page-->
 </body>
 </html>
