Modification html + api recette configuré

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="templates/header.html">
     <title>Miam & Co</title>
 </head>
 <body>
@@ -18,9 +17,7 @@
             <input type="text" id="barre_recherche" placeholder="Rechercher par mots clés...">
             <button id="btn_filtre">Filtrer par :</button>
         </div>
-        <div class="recettes"> <!--Les recettes s'affichent ici-->
-
-        </div>
+        <div class="recettes" id="recettes"></div> <!--Les recettes s'affichent ici-->
     </section>
 <script src="assets/js/main.js"></script> <!--Mis en bas de page pour ne pas ralentir le chargement de la page-->
 </body>
