--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="assets/css/reset_modern_normalize.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miam & Co</title>
 </head>
@@ -15,8 +17,11 @@
         <div class="barre_recherche"> <!--barre de recherche pour rechercher par mots clés-->
             <button id="btn_recherche"><img src="assets/img/loupe.webp" height="15px" alt="loupe"></button>
             <input type="text" id="barre_recherche" placeholder="Rechercher par mots clés...">
-            <button id="btn_filtre">Filtrer par :</button>
-        </div>
+            <label for="filtre">Filtrer par :</label>
+            <select id="btn_filtre">
+                <option value="recent">Récent</option>
+                <option value="ancien">Anciens</option>
+            </select>
         <div class="recettes" id="recettes"></div> <!--Les recettes s'affichent ici-->
     </section>
 <script src="assets/js/main.js"></script> <!--Mis en bas de page pour ne pas ralentir le chargement de la page-->
