--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,22 +8,37 @@
     <title>Miam & Co</title>
 </head>
 <body>
+    <div id="header"></div>
+    <div class="img_header">
+        <img src="assets/img/happy-woman-biting-slice-tasty-260nw-2587042729.jpg" alt="Femme qui mange en souriant">
+        <div class="p_header">   
+            <p>Choisissez parmi des milliers de recettes</p>
+            <a href="templates/connexion.html">Inscrivez-vous</a>
+        </div> 
+    </div>
     <section class="sidebar"> <!--section de gauche pour la recherche par catégories-->
         <h2>Recettes</h2> 
         <ul id="liste_categories"></ul> <!--Affiche la liste des catégories via l'API-->
     </section>
-
-    <section class="main"> <!--section droite pour la barre de recherche + filtrage + affichage des recettes-->
-        <div class="barre_recherche"> <!--barre de recherche pour rechercher par mots clés-->
-            <button id="btn_recherche"><img src="assets/img/loupe.webp" height="15px" alt="loupe"></button>
-            <input type="text" id="barre_recherche" placeholder="Rechercher par mots clés...">
-            <label for="filtre">Filtrer par :</label>
-            <select id="btn_filtre">
-                <option value="recent">Récent</option>
-                <option value="ancien">Anciens</option>
-            </select>
-        <div class="recettes" id="recettes"></div> <!--Les recettes s'affichent ici-->
+    <section>
+        <div class="zone_recherche">
+            <div class="barre_recherche"> <!--barre de recherche pour rechercher par mots clés-->
+                <button id="btn_recherche"><img src="assets/img/loupe.webp" height="15px" alt="loupe"></button>
+                <input type="text" id="barre_recherche" placeholder="Rechercher par mots clés...">
+            </div>
+            <div>       
+                <label for="btn_filtre">Filtrer par :</label>
+                <select id="btn_filtre">
+                    <option value="recent">Récent</option>
+                    <option value="ancien">Anciens</option>
+                </select>
+            </div>
+        </div> 
+        <div class="recettes" id="recettes">
+            <!--Les recettes s'affichent ici-->
+        </div> 
     </section>
+    <div id="footer"></div>
 <script src="assets/js/main.js"></script> <!--Mis en bas de page pour ne pas ralentir le chargement de la page-->
 </body>
 </html>
