Api terminé + avancement html index (img/video)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,11 @@
 <body>
     <div id="header"></div>
     <div class="img_header">
-        <img src="assets/img/happy-woman-biting-slice-tasty-260nw-2587042729.jpg" alt="Femme qui mange en souriant">
+        <picture>  <!--Affiche un format d'image adapté à l'ancienneté du navigateur-->
+            <source srcset="assets/img/happy-woman-biting-slice-tasty-260nw-2587042729.webp" type="image/webp">
+            <source srcset="assets/img/happy-woman-biting-slice-tasty-260nw-2587042729.avif" type="image/avif">
+            <img src="assets/img/happy-woman-biting-slice-tasty-260nw-2587042729.jpg" alt="Femme qui mange en souriant">
+        </picture>
         <div class="p_header">   
             <p>Choisissez parmi des milliers de recettes</p>
             <a href="templates/connexion.html">Inscrivez-vous</a>
@@ -38,6 +42,31 @@
             <!--Les recettes s'affichent ici-->
         </div> 
     </section>
+    <div class="contenu_video">
+        <iframe 
+            width="460" height="315" 
+            src="https://www.youtube.com/embed/MuZGBlYEYMo?si=C8Z-Cfw-02p-dLLe&amp;controls=0&amp;start=1&mute=1" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin">
+        </iframe>
+        <img src="assets/img/pexels-alena-evseenko-660538512-34560968.jpg" alt="" width="200" height="315" >
+        <iframe 
+            width="460" height="315" 
+            src="https://www.youtube.com/embed/9g-gMkV5vL4?si=vNRDt5Met7UisZ6n&amp;controls=0&mute=1" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin">
+        </iframe>
+        <img src="assets/img/pexels-dapur-melodi-192125-1109197.jpg" alt="" width="200" height="315" >
+    </div>
+    <div class="newsletter">
+        <p>Soyez les premiers informés des dernières recettes intégrées</p>
+        <input type="email" placeholder="Votre email">
+        <button>S'inscrire</button>
+    </div>
     <div id="footer"></div>
 <script src="assets/js/main.js"></script> <!--Mis en bas de page pour ne pas ralentir le chargement de la page-->
 </body>
