--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,6 +69,9 @@
         <button>S'inscrire</button>
     </div>
     <div id="footer"></div>
-<script src="assets/js/main.js"></script> <!--Mis en bas de page pour ne pas ralentir le chargement de la page-->
+
+    <script src="../frontend/assets/js/random.js"></script>
+    <script src="assets/js/main.js"></script> <!--Mis en bas de page pour ne pas ralentir le chargement de la page-->
+
 </body>
 </html>
