Fusion recherche + main

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,10 +52,14 @@
                     <option value="plus5">+ de 5 personnes</option>
                 </select>
             </div>
+            <button id="btn_reset" type="button" aria-label="Réinitialiser la recherche">Réinitialiser</button>
         </div> 
         <div class="recettes" id="recettes">
             <!--Les recettes s'affichent ici-->
         </div> 
+        <div id="pagination" class="pagination">
+            <!--Les boutons de pages s'affichent ici-->
+        </div>
     </div>
 </section>
 
