Ajout icone onglet + modification header index

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,18 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miam & Co</title>
+    <link rel="icon" href="assets/img/poele.ico" type="image/x-icon">
 </head>
 <body>
-
-    <header id="header"></header>
+    <header class="header">
+        <nav aria-label="Navigation principale">
+            <a href="./index.html">Accueil</a>
+            <a href="templates/contact.html">Contact</a>
+            <a href="" title="Rechercher"></a><img src="" alt="Logo d'une loupe pour la recherche">
+            <a href="">Se connecter</a>
+            <a href="">S'inscrire</a>
+        </nav>
+    </header>
 <main>
     <div class="headerIndex">
         <picture> <!--Affiche un format d'image adapté à l'ancienneté du navigateur-->
@@ -74,7 +82,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             referrerpolicy="strict-origin-when-cross-origin">
         </iframe>
-            <img src="assets/img/pexels-alena-evseenko-660538512-34560968.jpg" alt="Image d'un cake aux fruits" width="200" height="315" >
+            <img src="assets/img/cake.webp" alt="Image d'un cake aux fruits" width="200" height="315" >
         <iframe 
             loading="lazy" 
             width="460" height="315" 
@@ -84,7 +92,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             referrerpolicy="strict-origin-when-cross-origin">
         </iframe>
-            <img src="assets/img/pexels-dapur-melodi-192125-1109197.jpg" alt="Image d'un bol contenant des légumes" width="200" height="315" >
+            <img src="assets/img/bol.webp" alt="Image d'un bol contenant des légumes" width="200" height="315" >
     </div>
     <div class="newsletter">
         <p>Soyez les premiers informés des dernières recettes intégrées</p>
