Petit ajout index

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,7 +40,7 @@
         <div class="zone_recherche">
             <div class="barre_recherche"> <!--barre de recherche pour rechercher par mots clés-->
                 <button id="btn_recherche" aria-label="Rechercher une recette">
-                    <img src="assets/img/loupe.webp" height="15px" alt="Loupe de recherche">
+                    <img src="" height="15px" alt="Loupe de recherche">
                 </button>
                 <input 
                     type="text" 
@@ -48,8 +48,9 @@
                     placeholder="Rechercher par mots clés..." 
                     aria-label="Champ de recherche par mots clés">
             </div>
-            <div>       
-                <label for="btn_personnes">Pour</label>
+            <div>
+                <p>Filtrer par :</p>       
+                <label for="btn_personnes">Personnes</label>
                 <select id="btn_personnes">
                     <option value="">Toutes les recettes</option>
                     <option value="1">Pour 1 personne</option>
@@ -59,7 +60,7 @@
                     <option value="plus5">+ de 5 personnes</option>
                 </select>
 
-                <label for="btn_date">Par date</label>
+                <label for="btn_date">Date</label>
                 <select id="btn_date">
                     <option value=""></option>
                     <option value="recent">Récent</option>
