--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
             <a href="templates/contact.html">Contact</a>
             <a href="" title="Rechercher"></a><img src="" alt="Logo d'une loupe pour la recherche">
             <a href="">Se connecter</a>
-            <a href="">S'inscrire</a>
+            <a href="templates/inscription.html">S'inscrire</a>
         </nav>
     </header>
 <main>
@@ -34,11 +34,11 @@
 <section class="middleIndex">
     <aside aria-label="Catégories de recettes"> <!--section gauche pour la recherche par catégories-->
         <h2>Recettes</h2> 
-        <ul id="liste_categories"></ul> <!--Affiche la liste des catégories via l'API-->
+        <ul id="liste_categories"></ul> <!--Affiche la liste des catégories-->
     </aside>
     <div>
         <div class="zone_recherche">
-            <div class="barre_recherche"> <!--barre de recherche pour rechercher par mots clés-->
+            <div class="barre_recherche"> <!--barre de recherche pour rechercher par mots clés + nb de personnes-->
                 <button id="btn_recherche" aria-label="Rechercher une recette">
                     <img src="" height="15px" alt="Loupe de recherche">
                 </button>
