--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,8 @@
         <nav aria-label="Navigation principale">
             <a href="./index.html">Accueil</a>
             <a href="templates/contact.html">Contact</a>
-            <a href="" title="Rechercher"></a><img src="" alt="Logo d'une loupe pour la recherche">
-            <a href="">Se connecter</a>
+            <a href="" title="Rechercher"></a><img src="assets/img/loupe.svg" alt="Logo d'une loupe pour la recherche">
+            <a href="templates/connexion.html">Se connecter</a>
             <a href="templates/inscription.html">S'inscrire</a>
         </nav>
     </header>
@@ -38,16 +38,16 @@
     </aside>
     <div>
         <div class="zone_recherche">
-            <div class="barre_recherche"> <!--barre de recherche pour rechercher par mots clés + nb de personnes-->
-                <button id="btn_recherche" aria-label="Rechercher une recette">
-                    <img src="" height="15px" alt="Loupe de recherche">
+            <form class="barre_recherche" role="search"> <!--barre de recherche pour rechercher par mots clés + nb de personnes-->
+                <button type="submit" id="btn_recherche" aria-label="Rechercher une recette">
+                    <img src="assets/img/loupe.svg" height="15px" alt="Loupe de recherche" aria-hidden="true">
                 </button>
                 <input 
                     type="text" 
                     id="barre_recherche" 
                     placeholder="Rechercher par mots clés..." 
                     aria-label="Champ de recherche par mots clés">
-            </div>
+            </form>
             <div>
                 <p>Filtrer par :</p>       
                 <label for="btn_personnes">Personnes</label>
