Ajout accessibilité + petit css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,7 +107,7 @@
         <p>Soyez les premiers informés des dernières recettes intégrées</p>
         <label for="newsletter_email" class="sr-only">Inscrivez votre adresse email</label> <!--Cache le label visuellement mais pas pour l’accessibilité-->
         <input id="newsletter_email" type="email" placeholder="Votre adresse email" required>
-        <button type="button" aria-label="S'incrire">S'inscrire</button>
+        <button type="button" aria-label="S'incrire" class="faux-bouton" disabled>S'inscrire</button>
     </div>
 </section>
 </main>
