Ajout html bouton tri par date

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,7 +68,7 @@
 
                 <label for="btn_date">Date</label>
                 <select id="btn_date">
-                    <option value=""></option>
+                    <option value="">Aucun tri</option>
                     <option value="recent">Récent</option>
                     <option value="ancien">Ancien</option>
                 </select>
