Ajout type bouton + h1 + logo et titre

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,10 +11,14 @@
 <body>
     <div id="toast" role="status"></div> 
     <header class="header">
+        <div class="logo_titre">
+            <img src="assets/img/poele.ico" alt="Logo Miam & Co" class="logo">
+            <h1 class="titre_h1">Miam & Co - Accueil</h1>
+        </div>
         <nav aria-label="Navigation principale">
             <a href="./index.html">Accueil</a>
             <a href="templates/contact.html">Contact</a>
-            <button id="btn_loupe" aria-label="Rechercher une recette" title="Rechercher une recette">
+            <button id="btn_loupe" type="button" aria-label="Rechercher une recette" title="Rechercher une recette">
                 <img src="assets/img/loupe.svg" alt="Logo d'une loupe pour la recherche" height="30px">
             </button>
             <a href="templates/connexion.html">Se connecter</a>
