Ajout img chatbot + changement format img poele

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <div id="toast" role="status"></div> 
+        <button class="robot" type="button">
+            <img src="assets/img/chatbot.webp" alt="Image d'un robot">
+        </button>
     <header class="header">
         <div class="logo_titre">
-            <img src="assets/img/poele.ico" alt="Logo Miam & Co" class="logo">
+            <img src="assets/img/poele.webp" alt="Logo Miam & Co" class="logo">
             <h1 class="titre_h1">Miam & Co - Accueil</h1>
         </div>
         <nav aria-label="Navigation principale">
